force-app/main/default/objects/Construction__c/Construction__c.object-meta.xml
<CustomObject>
    <label>Construction</label>
    <nameField>
        <label>Construction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>