force-app/main/default/objects/Construction__c/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Constructions (Billing Company)</relationshipLabel>
    <relationshipName>Constructions1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>