force-app/main/default/objects/Construction__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bricks</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Fast Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>