force-app/main/default/objects/Construction__c/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Constructions</relationshipLabel>
    <relationshipName>Constructions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>