force-app/main/default/objects/Construction__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Construction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Project</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Construction__c</referenceTo>
    <relationshipLabel>Constructions</relationshipLabel>
    <relationshipName>Constructions</relationshipName>
    <type>Lookup</type>
</CustomField>