force-app/main/default/objects/Construction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Building</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>Infrastructure Creation</fullName>
            </value>
            <value>
                <fullName>Infrastructure Renewal</fullName>
            </value>
            <value>
                <fullName>Infrastructure Connection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>