force-app/main/default/objects/Construction__c/fields/Work_Breakdown_Structure__c.field-meta.xml
<CustomField>
    <fullName>Work_Breakdown_Structure__c</fullName>
    <label>Work Breakdown Structure</label>
    <referenceTo>Work_Breakdown_Structure__c</referenceTo>
    <relationshipLabel>Constructions</relationshipLabel>
    <relationshipName>Constructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>